--- a/Login/login.css
+++ b/Login/login.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 /* Quando não existe a fonte no computador, pode baixar no google.fonts e importar no arquivo CSS */
 
+* {
+
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
 
 /* formatação pela class 
 .titulo {
@@ -21,6 +28,48 @@ h1 {
 
     font-size: 76px;
     font-family: inter;
+    font-weight: normal;
+    margin-bottom: 16px;
 
 } 
 
+.inpt {
+
+    border-radius: 16px; /* Arredondar as bordas da caixa */
+    padding: 18px;  /*Espaçamento da caixa de texto das bordas */
+    border: none; /*Tirar a borda do caixa de texto - altura - colocar borda ficaria com 1px solid + cor */
+    background-color: #F7F9FB;
+    width: 377px; /* tamanho do botão - largura */
+    margin-bottom: 16px;
+}
+
+.btn {
+
+    padding: 18px;  /*Espaçamento da caixa de texto das bordas */
+    border-radius: 16px; /* Arredondar as bordas da caixa */
+    background-color: #1C1C1C; /*colocar cor no campo do botão */
+    color: #FFFFFF; /* colocar cor da letra do botão */
+    border: none; /*Tirar a borda do caixa de texto - altura*/
+    width: 377px; /* tamanho do botão - largura*/
+    border-radius: 10px; /*arredondar as bordas */
+}
+
+.login-container {
+
+    display: flex;
+    flex-direction: column; /* deixar em colunas */
+    justify-content: center; /* alinhamento na vertical - quando utilizado o flex-direction como row ele inverte para horizontal  */
+    align-items: center; /* alinhamento na horizontal - quando utilizado o flex-direction como row ele inverte para vertical */
+    height: 100vh; /* VH - proporção em altura, VW - proporção em largura */
+
+}
+
+.logo {
+    height: 60px;
+
+}
+
+.robo-image {
+
+    height: 1024px;
+}
