Finalização tela de login

--- a/Login/login.css
+++ b/Login/login.css
@@ -22,45 +22,71 @@
     font-size: 76px;
 
 } */
- 
+
+.page-container {
+
+    display: flex;
+
+
+}
+
 /* formatação pela tag */
 h1 {
 
     font-size: 76px;
+    /* tamanho da fonte */
     font-family: inter;
+    /* a letra */
     font-weight: normal;
+    /* tipo da letra, se negito ou nomal etc */
     margin-bottom: 16px;
 
-} 
+}
 
 .inpt {
 
-    border-radius: 16px; /* Arredondar as bordas da caixa */
-    padding: 18px;  /*Espaçamento da caixa de texto das bordas */
-    border: none; /*Tirar a borda do caixa de texto - altura - colocar borda ficaria com 1px solid + cor */
+    border-radius: 16px;
+    /* Arredondar as bordas da caixa */
+    padding: 18px;
+    /*Espaçamento da caixa de texto das bordas */
+    border: none;
+    /*Tirar a borda do caixa de texto - altura - colocar borda ficaria com 1px solid + cor */
     background-color: #F7F9FB;
-    width: 377px; /* tamanho do botão - largura */
+    width: 377px;
+    /* tamanho do botão - largura */
     margin-bottom: 16px;
 }
 
 .btn {
 
-    padding: 18px;  /*Espaçamento da caixa de texto das bordas */
-    border-radius: 16px; /* Arredondar as bordas da caixa */
-    background-color: #1C1C1C; /*colocar cor no campo do botão */
-    color: #FFFFFF; /* colocar cor da letra do botão */
-    border: none; /*Tirar a borda do caixa de texto - altura*/
-    width: 377px; /* tamanho do botão - largura*/
-    border-radius: 10px; /*arredondar as bordas */
+    padding: 18px;
+    /*Espaçamento da caixa de texto das bordas */
+    border-radius: 16px;
+    /* Arredondar as bordas da caixa */
+    background-color: #1C1C1C;
+    /*colocar cor no campo do botão */
+    color: #FFFFFF;
+    /* colocar cor da letra do botão */
+    border: none;
+    /*Tirar a borda do caixa de texto - altura*/
+    width: 377px;
+    /* tamanho do botão - largura*/
+    border-radius: 10px;
+    /*arredondar as bordas */
 }
 
 .login-container {
 
     display: flex;
-    flex-direction: column; /* deixar em colunas */
-    justify-content: center; /* alinhamento na vertical - quando utilizado o flex-direction como row ele inverte para horizontal  */
-    align-items: center; /* alinhamento na horizontal - quando utilizado o flex-direction como row ele inverte para vertical */
-    height: 100vh; /* VH - proporção em altura, VW - proporção em largura */
+    flex-direction: column;
+    /* deixar em colunas */
+    justify-content: center;
+    /* alinhamento na vertical - quando utilizado o flex-direction como row ele inverte para horizontal  */
+    align-items: center;
+    /* alinhamento na horizontal - quando utilizado o flex-direction como row ele inverte para vertical */
+    height: 100vh;
+    /* VH - proporção em altura, VW - proporção em largura */
+    width: 50vw;
 
 }
 
@@ -71,5 +97,14 @@ h1 {
 
 .robo-image {
 
-    height: 1024px;
+    background-image: url("../assets/imgs/Sidebar.png");
+    /* mostra a imagem de fundo na pagina, onde se necessário dá para escrever em cima */
+    background-size: cover;
+    /* cover para manter a proporção da imagem  e contain é para imagem sem corte */
+    /* background-repeat: no-repeat; */
+    /* para não repetir a imagem */
+
+    width: 50vw;
+    height: 100vh;
+
 }
