--- a/chat/chat.css
+++ b/chat/chat.css
@@ -1,28 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 .btnchat {
-
     background-color: black;
     border-radius: 5px;
     color: #FFFFFF;
     font-size: 20px;
     width: 200px;
-
 }
 
 .botoes {
-
     background-color: white;
     border-radius: 5px;
     border: none;
-    font-size: 15px;
-    width: 200px;
+    width: 100%;
     color: black;
     margin-top: 20px;
     font-family: inter;
     text-align: left;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 
-
+.botoes img {
+    margin-right: 15px;
 }
 
 .tela {
@@ -31,28 +32,25 @@
 
 
 .chat {
-    width: 12vw;
+    width: 15vw;
     height: 100vh;
     padding-top: 1vw;
     padding-left: 1vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-
+    border-right: 1px solid #ccc;
 }
 
 .principal {
-
-    width: 88vw;
-    height: 80vh;
+    width: 85vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 10%;
     flex-direction: column;
-    justify-content: space-between;
- 
+
 }
 
 
@@ -64,25 +62,24 @@
 .inferior {
     width: 100%;
     height: 30%;
-
 }
 
 .pesquisa {
-
-    width: 88%;
+    width: 85%;
     height: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
 }
 
 .input {
-
     padding: 18px;
     border: none;
     background-color: #F7F9FB;
     width: 50%;
     margin-bottom: 16px;
+    border-radius: 15px;
 }
 
 .linha {
@@ -94,11 +91,38 @@
 
 
 .tabela {
-
-    width: 80%;
-
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
 }
 
-p {
-    background-color: white;
+.botao {
+    background-color: #F7F9FB;
+    border-radius: 5px;
+    border: none;
+    font-size: 15px;
+    width: 300px;
+    color: black;
+    margin-top: 20px;
+    font-family: inter;
+    text-align: left;
+    max-width: 60vw;
+}
+
+.imagem {
+    padding-top: 50px;
+}
+
+h1 {
+    text-align: center;
+    font-family: inter;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 img{
+    margin-bottom: 15px;
 }
